# Real-Time-Observability

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yaml
fastapi_project/: data_generator.py  database.py  kafka_consumer.py  kafka_producer.py  kpi_text_dashboard.py  main.py  middleware.py  models.py
tests/: test_main.py
