[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = ["Anthony Delgado <115326818+AnthonyD4101@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
